fixed overflow issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -115,6 +115,7 @@ section.blog {
     background-color: #272727;
     padding: 20px;
     border-radius: 20px;
+    overflow: hidden;
 }
 
 section.display {
